Updating with newVirtualThreadPerTaskExecutor